made the projects wider wheen on mobile to avoid them becoming too thin

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -635,16 +635,7 @@ textarea {
     height: 100px;
     font-size: 1.5em;
   }
-}
-@media (max-width: 650px) {
-  .project-desc {
-    align-items: flex-start;
-  }
-  .tech-used {
-    align-items: flex-start;
-    justify-content: flex-start;
-  }
-  .project-icon {
-    justify-content: flex-start;
+  .projects {
+    width: 90%;
   }
 }
